--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
     </section>
     <ion-icon name="paper-plane-outline"></ion-icon>
   </footer>
-
+  
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  
   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   <script src="script/script.js"></script>
 </body>
