Adicionei página de loading

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
-  <link href="style/reset.css" rel="stylesheet"/>
-  <link href="style/style.css" rel="stylesheet"/>
+  <link href="style/loading.css" rel="stylesheet"/>
+  <link href="style/reset.css"   rel="stylesheet"/>
+  <link href="style/style.css"   rel="stylesheet"/>
 </head>
 <body>
 
@@ -51,12 +52,17 @@
 
   </aside>
 
-  <section class="login ">
+  <section class="login">
     <img src="images/logo 2.png" alt="logo.png" />
     <input type="text" placeholder="Digite seu nome" />
     <div class="errorMessage"></div>
     <button onclick="loginChat()">Entrar</button>
-    
+  </section>
+
+  <section class="loading hidden">
+    <img src="images/logo 2.png" alt="logo.png" />
+    <div class="spinner spinner--steps icon-spinner" aria-hidden="true"></div>
+    <p>Entrando...</p>
   </section>
 
   <footer>
